:bug: fixed spacing on skill in the profile page

--- a/styles/app.css
+++ b/styles/app.css
@@ -392,14 +392,11 @@ img {
   .devSkill {
     display: flex;
     justify-content: space-between;
-  }
-
-  .devSkill__title {
-    flex-basis: 20%;
+    gap: 3rem;
   }
 
   .devSkill__info {
-    flex-basis: 75%;
+    flex-basis: 80%;
   }
 }
 
